<resources>
    <string name="app_name" translatable="false">Djiba Am !</string>
    <string name="icon_expenses" translatable="false">icon expenses</string>
    <string name="menu_for_expense_registering_or_periodic_expenses_consultation">Menu pour enregistrer une dépense ou consulter les dépenses pour une période donnée.</string>
    <string name="my_budgets">Mes Budgets</string>
    <string name="my_debts">Mes dettes</string>
    <string name="my_expenses">Mes Dépenses</string>
    <string name="my_income_or_earning">Mes entrées (Gains)</string>
    <string name="my_receivables">Mes créances</string>
    <string name="menu_for_adding_a_loan_that_i_gave_to_someone_or_consult_periodic_credits_statuses">Menu pour enregistrer un prêt que j\'ai accordé à un tiers, consulter les crédits que j\'ai accordé sur une période par rapport à leur statut (remboursé ou non)</string>
    <string name="my_account">Mon compte</string>
    <string name="about">Apropos</string>
    <string name="not_yet_implemented" translatable="false">Not yet implemented... Coming soon</string>
    <string name="to_day">Aujourd\'hui</string>
    <string name="summary">Résumé</string>
    <string name="this_month">Ce mois</string>
    <string name="this_year">Cette année</string>
    <string name="my_last_expenses">Mes dernières dépenses</string>
    <string name="show_more_view_expenses_of_a_period">Voir plus (Rechercher les dépenses d\'une période)</string>
    <string name="save_an_expense">Enregistrer une dépense</string>
    <string name="entitled">Intitulé</string>
    <string name="amount">Montant</string>
    <string name="data_and_time">Date et heure</string>
    <string name="reason_description">Raison ou Description</string>
    <string name="save">Enregistrer</string>
    <string name="mandatory_field">Champs Obligatoire</string>
    <string name="amount_must_be_a_number_and_is_mandatory">Le montant doit etre une suite de chiffre et est obligatoire</string>
    <string name="new_expense">Nouvelle Dépense</string>
    <string name="save_done">Sauvegarde effectué</string>
    <string name="saving">Sauvegarde en cours…</string>
    <string name="an_error_occured">Une erreur s\'est produite</string>
    <string name="saved">Sauvegardée</string>
    <string name="ok" translatable="false">OK</string>
    <string name="expense_date">Date de la dépense :</string>
    <string name="expended_amount">Montant dépensé</string>
    <string name="looking_up">Recherche…</string>
    <string name="view_more">Voir plus</string>
    <string name="today_expenses">Dépenses d\'aujourd\'hui</string>
    <string name="this_month_expense">Dépenses de ce mois</string>
    <string name="this_year_expenses">Dépenses de cette années</string>
    <string name="view_expenses_of_a_date">Voir les dépenses d\'une date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="my_periodical_expenses">Mes dépenses périodique</string>
    <string name="fill_in_a_date_or_part_of_a_date">Entrer une date ou une partie d\'une date</string>
    <string name="deleting">Suppression en cours…</string>
    <string name="back">Rentrer</string>
    <string name="summary_of_my_incomes">Résumé de mes gains</string>
    <string name="my_recent_incomes">Mes récents gains (entrées)</string>
    <string name="no_income_found">Aucun gain (aucune entrée)</string>
    <string name="amount_received">Montant perçu</string>
    <string name="collection_date">Date de perception</string>
    <string name="funds_sources">Source des fonds</string>
    <string name="state">État</string>
    <string name="incomes_of_today">Revenus d\'aujourd\'hui</string>
    <string name="incomes_of_this_month">Revenu de ce mois</string>
    <string name="incomes_of_this_year">Revenu de cette année</string>
    <string name="view_incomes_of_a_day">Voir les revenus d\'une date (Jour ou mois ou années)</string>
    <string name="my_incomes">Mes revenus</string>
    <string name="my_incomes_of_today">Mes revenus d\'aujoud\'hui</string>
    <string name="my_incomes_of_this_month">Mes revenus de ce mois</string>
    <string name="my_incomes_of_this_year">Mes revenus de cette année</string>
    <string name="filtering_sticker">Étiquette de filtrage</string>
    <string name="filter_expenses_of_a_period_day_or_month_or_year">Filtrer les dépenses d\'une période</string>
    <string name="filter_by_sticker">Filter par étiquette de filtrage</string>
    <string name="fill_in_a_sticker_for_filtering">Entrer une étiquette pour filtrer</string>
    <string name="total">Total</string>
    <string name="my_last_debts_contracted">Mes dernières dettes contractées</string>
    <string name="no_debt_found">Aucune dette trouvée.</string>
    <string name="save_a_debt">Enregistrer une dette</string>
    <string name="creditor_names">Noms du créancier</string>
    <string name="creditor_contact">Contact du créancier</string>
    <string name="loaning_date">Date d\'emprunt</string>
    <string name="repayment_due_date">Date limite de paiement</string>
    <string name="repayment_date__if_paid_already">Date de paiement (Si déjà payé)</string>
    <string name="must_be_a_number">Doit être un nombre</string>
    <string name="paid_on">Payé le</string>
    <string name="due_date">Date d\'échéance</string>
    <string name="not_paid">Non payé</string>
    <string name="paid">Payé</string>
    <string name="debtor_names">Noms du debiteur</string>
    <string name="debtor_contact">Contact du débiteur</string>
    <string name="witness">Témoin</string>
    <string name="telltale">Temoin</string>
    <string name="new_debt">Nouvelle dette</string>
    <string name="incurred_or_contracted_today">Contractées aujourd\'hui</string>
    <string name="incurred_this_month">Contractée ce mois</string>
    <string name="incurred_this_year">Contractée cette année</string>
    <string name="disbursed_today">Remboursée aujourd\'hui</string>
    <string name="disbursed_this_month">Remboursée ce mois</string>
    <string name="disbursed_this_year">Remboursée cette année</string>
    <string name="expire_today">Expire aujourd\'hui</string>
    <string name="expires_this_month">Expire ce mois</string>
    <string name="expire_this_year">Expire cette année</string>
    <string name="filter_otherwise">Filtrer autrement</string>
    <string name="all">Tout</string>
    <string name="empty">Vide</string>
    <string name="new_element">new element</string>
    <string name="my_last_receivables_given">Mes derniers créances données</string>
    <string name="registering_a_new_receivable">Enregistrement d\'une nouvelle créance</string>
    <string name="already_paid">Déjà payée</string>
    <string name="receivable_assigned_today">Créance accordéé aujourd\'hui</string>
    <string name="assigned_this_month">Assignée ce mois</string>
    <string name="no_item_found">Aucun element trouvé</string>
    <string name="beggining_date">Date de debut</string>
    <string name="remaining">Restant</string>
    <string name="consumed">Consommé</string>
    <string name="my_balances">Mes Soldes</string>
    <string name="cash">En espèce</string>
    <string name="mobile_wallet_mobile_money">Portefeuille mobile (mobile money)</string>
    <string name="summarized_view_of_my_balances">Vue résumé de mes soldes</string>
    <string name="my_last_budgets">Mes derniers budgets</string>
    <string name="create_a_new_budget">Créer un nouveau budget</string>
    <string name="starting_date">Date de debut</string>
    <string name="end_date">Date de fin</string>
    <string name="new_budget">Nouveau Budget</string>
    <string name="in_bank">En banque</string>
    <string name="budget_deleted_with_associated_expended_actualize_please">Budget Supprimée ainsi que toutes les dépenses associées… Bien vouloir actualiser</string>
    <string name="do_you_really_want_to_delete_this_budget_it_ll_lead_to_delete_all_linked_expenses">Voulez-vous vraiment supprimer ce budget ? La suppression d\'un budget entrainera la suppression de toutes les dépenses associées…</string>
    <string name="cancel">Annuler</string>
    <string name="go_on">Continuer</string>
    <string name="going_on_budget_total">Total budget en cours</string>
    <string name="account_name">Nom du compte</string>
    <string name="select_currency">Choisir le devise</string>
    <string name="page_not_initialized">Page Not Initialized</string>
    <string name="insufficient_account_balance_to_create_this_budget">Le solde de votre compte est insuffisant pour la création de ce budget</string>
    <string name="summary_contracted_and_unpaid">Résumé (contracté et impayé)</string>
    <string name="welcome__">Bienvenu(e),</string>
    <string name="no_expense_registered">AUCUN ELEMENT TROUVÉ… AUCUNE DEPENSE N\'A ÉTÉ ENREGISTRÉE. ENREGISTRER VOS DEPENSES POUR LES VOIR ICI</string>
    <string name="insufficient_wallet">Solde insuffisant</string>
    <string name="required_field">Renseigner ce champs SVP</string>
    <string name="budget_description">Menu pour créer des budgets à base de votre argent disponible (dans votre compte, liquide ou wallet)</string>
    <string name="revenus_description">Menu pour enregistrer les differents entrées d\'argent (Ce que vous avez à la banque, l\'argent liquide ou le mobile money)</string>
    <string name="no_account_found">404 : Aucun compte trouvé</string>
</resources>