<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_border_margin_4"
        app:cardElevation="@dimen/default_card_elevation_2"
        tools:context=".ui.receivable.BottomSheetMoreReceivableMenuFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="@dimen/big_margin_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_border_margin_4"
                    app:cardElevation="@dimen/default_card_elevation_2"
                    app:cardCornerRadius="@dimen/default_card_radius_5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="@dimen/default_border_margin_4">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/assigned_today"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/receivable_assigned_today" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/paid_today"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/disbursed_today" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/expires_today"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/expire_today" />

                        <View
                            android:layout_margin="@dimen/big_margin_10"
                            android:layout_width="200dp"
                            android:layout_height="1dp"
                            android:background="@color/default_text_color_blue_cyan" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="@dimen/default_card_elevation_2"
                    app:cardCornerRadius="@dimen/default_card_radius_5"
                    android:layout_margin="@dimen/default_border_margin_4">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="@dimen/default_border_margin_4">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/assigned_this_month"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/assigned_this_month" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/paid_this_month"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/disbursed_this_month" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/expires_this_month"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/expires_this_month" />

                        <View
                            android:layout_margin="@dimen/big_margin_10"
                            android:layout_width="200dp"
                            android:layout_height="1dp"
                            android:background="@color/default_text_color_blue_cyan" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/default_card_radius_5"
                    app:cardElevation="@dimen/default_card_elevation_2"
                    android:layout_margin="@dimen/default_border_margin_4">

                    <LinearLayout
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="@dimen/default_border_margin_4">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/assigned_this_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/incurred_this_year" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/paid_this_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/disbursed_this_year" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/expires_this_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/expire_this_year" />

                        <View
                            android:layout_margin="@dimen/big_margin_10"
                            android:layout_width="200dp"
                            android:layout_height="1dp"
                            android:background="@color/default_text_color_blue_cyan" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/filter_otherwise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_otherwise"
                    android:layout_margin="@dimen/big_margin_10" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>
</layout>